--- a/08.WebStandard/css/style.css
+++ b/08.WebStandard/css/style.css
@@ -23,7 +23,7 @@
 #header {
     width: 100%;
     height: 325px;
-    background-color: #aaa;
+    background: url(../img/header_bg.jpg) center top repeat-x;
 }
 #contents {
     width: 100%;
@@ -65,3 +65,20 @@
     height: 200px;
     background-color: #666;
 }
+
+/* 헤더 */
+.header {}
+.header .header__menu {
+    text-align: right;
+}
+.header .header__menu a {
+    color: #fff;
+    padding: 10px 0px 10px 13px;
+    display: inline-block;
+}
+.header .header__menu a:hover {
+    color: #666;
+}
+
+.header .header__title {}
+.header .header__icon {}
