--- a/08.WebStandard/css/reset.css
+++ b/08.WebStandard/css/reset.css
@@ -14,3 +14,45 @@ body, input, textarea, select, button, table {
 /* a link */
 a {color: #222; text-decoration: none;}
 a:hover {color: #390;}
+
+/* IR(Image Replacement) 기법 */
+
+/* 1. Phark Method */
+/* 글자 : 배경이미지 설정하고 글자는 'text-indent:-9999px' 내어쓰기하여 안보이게 함 */
+/* 단점으로는 이미지가 안보일 시 대체텍스트도 안보임 */
+.ir_pharkMethod {
+    display: block;
+    overflow: hidden;
+    font-size: 0;
+    line-height: 0;
+    text-indent: -9999px;
+}
+/* 2. WA IR Method */
+/* 글자를 span태그로 감싸고 z-index를 -1줌 */
+/* 이미지가 없어도 대체텍스트 보여주고자 할 때 */
+.ir_wa {
+    display: block;
+    overflow: hidden;
+    position: relative;
+    z-index: -1;
+    width: 100%;
+    height: 100%;
+}
+/* 3. Screen Out Method */
+/* 대체텍스트가 아니라 접근성을 위한 숨겨진 텍스트를 제공하고자 할 때 이용 */
+.ir_screenOut {
+    overflow: hidden;
+    position: absolute;
+    width: 0;
+    height: 0;
+    line-height: 0;
+    text-indent: -9999px;
+}
+/* 동일한 효과로 이와 같이도 사용함
+.blind {
+    position: absolute;
+    margin: -1px;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+} */
