--- a/08.WebStandard/css/reset.css
+++ b/08.WebStandard/css/reset.css
@@ -11,6 +11,11 @@ body, input, textarea, select, button, table {
     font-family: 'Nanum Gothic',AppleSDGothicNeo-Regular,'Malgun Gothic','맑은 고딕',dotum,'돋움',sans-serif; 
     color: #222; font-size: 13px; line-height: 1.5;}
 
+/* 블릿기호 초기화 */
+dl,ul,li,ol,menu {
+    list-style: none;
+}
+
 /* a link */
 a {color: #222; text-decoration: none;}
 a:hover {color: #390;}
