--- a/08.WebStandard/css/style.css
+++ b/08.WebStandard/css/style.css
@@ -17,21 +17,21 @@
 #skip a:focus {top: 0;}
 
 /* 레이아웃 */
-#wrap {
+/* #wrap {
     width: 100%;
-}
+} */
 #header {
-    width: 100%;
+/*     width: 100%; */
     height: 325px;
     background: url(../img/header_bg.jpg) center top repeat-x;
 }
-#contents {
+/* #contents {
     width: 100%;
     height: 800px;
     background-color: #ccc;
-}
+} */
 #footer {
-    width: 100%;
+/*     width: 100%; */
     height: 200px;
     background-color: #555;
 }
@@ -45,11 +45,11 @@
 }
 
 /* 컨텐츠 레이아웃 */
-#contents__nav {
+/* #contents__nav {
     width: 100%;
     height: 200px;
     background-color: #333;
-}
+} */
 #contents__title {
     width: 100%;
     height: 200px;
@@ -67,7 +67,7 @@
 }
 
 /* 헤더 */
-.header {}
+
 .header .header__menu {
     text-align: right;
 }
@@ -140,4 +140,47 @@
 }
 .header .header__icon a.icon4:hover {
     background-position: -60px -180px;
+}
+
+/* float:left 로 인한 영역깨짐(height:0) 방지법
+    1. 깨지는 영역에 똑같이 float:left 사용.(X)
+        -모든 박스에 float:left를 사용해야 함
+    2. float의 성질을 차단하는 clear:both 사용(X)
+        -어떤 영역이 깨졌는지 찾기 어려움.
+    3. float를 사용한 상위 박스한테 overflow:hidden 사용(완벽하진 않지만 그나마 사용)
+    4. clearfix를 사용(제일 좋은 방법)
+*/
+
+/* 전체 메뉴 */
+.nav {
+    overflow: hidden;
+    padding: 30px 0;
+}
+.nav > div {
+    float: left;
+    width: 40%;
+}
+.nav > div:last-child {
+    width: 20%;
+}
+.nav > div h3 {
+    font-size: 18px;
+    color: #25a2d0;
+    margin-bottom: 4px;
+}
+
+.nav > div ol {
+    overflow: hidden;
+}
+.nav > div ol li {
+    float: left;
+    width: 50%;
+}
+
+.nav > div.last ol li {
+    width: 100%;
+}
+
+.nav > div ol li a:hover {
+    text-decoration: underline;
 }
