--- a/08.WebStandard/css/style.css
+++ b/08.WebStandard/css/style.css
@@ -45,15 +45,15 @@
 }
 
 /* 컨텐츠 레이아웃 */
-/* #contents__nav {
-    width: 100%;
-    height: 200px;
-    background-color: #333;
-} */
+#contents__nav {
+/*     width: 100%;
+    height: 200px; */
+    background-color: #f6fdff;
+}
 #contents__title {
-    width: 100%;
-    height: 200px;
-    background-color: #444;
+/*     width: 100%;
+    height: 200px; */
+    background-color: #eaf7fd;
 }
 #contents__banner {
     width: 100%;
@@ -183,4 +183,29 @@
 
 .nav > div ol li a:hover {
     text-decoration: underline;
+}
+
+
+/* 메인영역 타이틀 */
+.title {
+    position: relative;
+    /* position:relative의 3가지 역할
+        1. 기준점 역할 */
+}
+.title h2 {
+    font-size: 40px;
+    text-align: center;
+    padding: 5px 0;
+    letter-spacing: 2px;
+    color: #2c94c4;
+    font-family: 'Nanum Brush Script', cursive;
+}
+.title .btn {
+    position: absolute;
+    /* position 많이 사용 시 반응형에서 힘들다 많이 안쓰는게 좋음 */
+    top: 5px;
+    right: 0;
+    width: 60px;
+    height: 60px;
+    background: url(../img/icon.png) no-repeat 0 -600px;
 }
