--- a/08.WebStandard/css/style.css
+++ b/08.WebStandard/css/style.css
@@ -483,3 +483,57 @@ Cross Browsing 방법은 아래처럼*/
     width: 17px;
     height: 17px;
 }
+
+/* 게시판4 마우스오버효과 1 */
+.notice__hover h4 {
+    font-size: 14px;
+    color: #0093bd;
+    padding-bottom: 3px;
+    font-weight: bold;
+}
+.notice__hover ul {
+    overflow: hidden;
+}
+.notice__hover li {
+    float: left;
+    width: 93px;
+    margin-right: 5px;
+    text-align: center;
+}
+
+.notice__hover li:last-child {
+    margin-right: 0;
+}
+
+.notice__hover li a span {
+    position: relative;
+    display: block;
+    width: 93px;
+    height: 93px;
+    line-height: 93px;
+}
+
+.notice__hover li a span img {
+    width: 100%;
+}
+
+.notice__hover li a span em {
+    visibility: hidden;
+    position: absolute;
+    left: 0;
+    top: 0;
+    background: rgba(0, 0, 0, 0.7);
+    color: #fff;
+    width: 100%;
+    height: 100%;
+}
+
+.notice__hover li a span:hover em {
+    visibility: visible;
+}
+
+.notice__hover li a strong {
+    padding-top: 3px;
+    display: inline-block;
+    font-size: 12px;
+}
