--- a/08.WebStandard/css/style.css
+++ b/08.WebStandard/css/style.css
@@ -175,7 +175,7 @@
 .nav > div ol li {
     float: left;
     width: 50%;
-}
+} 
 
 .nav > div.last ol li {
     width: 100%;
@@ -533,6 +533,52 @@ Cross Browsing 방법은 아래처럼*/
 }
 
 .notice__hover li a strong {
+    padding-top: 3px;
+    display: inline-block;
+    font-size: 12px;
+}
+
+/* 게시판4 마우스오버효과 2 */
+.notice__hover2 ul {
+    overflow: hidden;
+}
+.notice__hover2 li {
+    float: left;
+    width: 93px;
+    margin-right: 5px;
+    text-align: center;
+}
+
+.notice__hover2 li:last-child {
+    margin-right: 0;
+}
+
+.notice__hover2 li a span {
+    position: relative;
+    display: block;
+    width: 93px;
+    height: 93px;
+}
+
+.notice__hover2 li a span img {
+    width: 100%;
+}
+
+.notice__hover2 li a span em {
+    visibility: hidden;
+    position: absolute;
+    left: 0;
+    bottom: 0; 
+    background: rgba(0, 0, 0, 0.7);
+    color: #fff;
+    width: 100%;
+}
+
+.notice__hover2 li a span:hover em {
+    visibility: visible;
+}
+
+.notice__hover2 li a strong {
     padding-top: 3px;
     display: inline-block;
     font-size: 12px;
