--- a/08.WebStandard/css/style.css
+++ b/08.WebStandard/css/style.css
@@ -583,3 +583,64 @@ Cross Browsing 방법은 아래처럼*/
     display: inline-block;
     font-size: 12px;
 }
+
+/* 탭메뉴 게시판 */
+/* 콘텐츠 요소를 보이지 않게 하는 방법
+    1. display:none; !== block (영역이 사라짐)
+    2. visivility:hidden; !== visible (영역유지)
+    3. opacity:0; !== 1 (영역유지)
+    4. IR효과
+*/
+
+.tabMenu {
+    position: relative;
+    border: 1px solid #ccc;
+    padding: 8px;
+    height: 105px;
+}
+.tabMenu__list {
+    overflow: hidden;
+    border-bottom: 1px solid #ccc;
+}
+.tabMenu__list li {
+    float: left;
+    border: 1px solid #ccc;
+    margin-right: -1px;
+    margin-bottom: -1px;
+}
+.tabMenu__list li a {
+    padding: 5px 10px;
+    display: block; 
+}
+.tabMenu__list li .tabMenu__notice {
+    width: 270px;
+    position: absolute;
+    top: 48px;
+    left: 0;
+    border: 0;
+}
+.tabMenu__list li .tabMenu__notice li {
+    float: none;
+    border: 0;
+    background: url(../img/dot.gif) no-repeat 9px 8px;
+    padding-left: 18px;
+}
+.tabMenu__list li .tabMenu__notice li a {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    width: 100%;
+    padding: 0 0 3px 0;
+    /* 
+    padding-left: 8px; */
+}
+
+.tabMenu__list .active {
+    background: #2c94c4;
+}
+.tabMenu__list .active a {
+    color: #fff;
+}
+.tabMenu__list .active li a {
+    color: #333;
+}
