--- a/08.WebStandard/css/reset.css
+++ b/08.WebStandard/css/reset.css
@@ -28,6 +28,9 @@ h1,h2,h3,h4,h5,h6 {
     font-weight: normal;
 }
 
+/*  테두리 초기화 */
+img, fieldset {border: 0 none;}
+
 /* a link */
 a {color: #222; text-decoration: none;}
 a:hover {color: #390;}
