--- a/08.WebStandard/css/reset.css
+++ b/08.WebStandard/css/reset.css
@@ -12,7 +12,7 @@ body, input, textarea, select, button, table {
     color: #222; font-size: 13px; line-height: 1.5;}
 
 /* 폰트 스타일 초기화 */
-em {
+em, address {
     font-style: normal;
 }
 
