--- a/08.WebStandard/css/style.css
+++ b/08.WebStandard/css/style.css
@@ -48,6 +48,14 @@
 /*     width: 100%;
     height: 200px; */
     background-color: #f6fdff;
+}
+
+/* 왜? #contents__nav .default라고 상세도를 올려 선택자
+이용하면 .on 헬퍼 클래스가 안먹히고 상세도 업으면 먹히죠?! */
+/* css의 specifishity(명세도) 때문임
+#contents__nav .default의 경우엔 명세도가 1-1-0이라 id에 먹힘 */
+/* css */
+.default {
     display: none;
 }
 
@@ -201,7 +209,9 @@
     color: #2c94c4;
     font-family: 'Nanum Brush Script', cursive;
 }
-.title .btn {
+
+/* .title .btn이라고 상세도 올리면 .on헬퍼 클래스가 안되는이유가? */
+.btn {
     position: absolute;
     /* position 많이 사용 시 반응형에서 힘들다 많이 안쓰는게 좋음 */
     top: 5px;
@@ -217,19 +227,19 @@
 .title .btn.on {
     background-position: 0 -660px;
 } */
+
 /* helper class for vanilla javascript */
-/* .on {
+.on {
     background-position: 0px -660px;
     display: block;
-} */
+}
 
 /* 배너영역 */
 
-.banner {
+/* .banner {
     position: relative;
     padding: 24px 0 20px;
 }
-
 .banner a.prev {
     position: absolute;
     left: -80px;
@@ -248,7 +258,6 @@
 }
 .banner a.prev:hover {background-position: -193px 0; }
 .banner a.next:hover {background-position: -193px -43px; }
-
 .banner ul {
     overflow: hidden;
 }
@@ -256,23 +265,23 @@
     float: left;
     width: 330px;
 }
-/* img는 인라인구조 */
+img는 인라인구조
 .banner ul li img {
     border: 4px solid #dcdcdc;
 }
 .banner ul li img:hover {
     border-color: #98bcbc;
 }
-/* .banner ul li:last-child {
+.banner ul li:last-child {
     text-align: right;
 }
 .banner ul li:nth-child(2) {
     text-align: center;
 } 
-Cross Browsing 방법은 아래처럼*/
+Cross Browsing 방법은 아래처럼
 
-/* text-align 속성은 inline구조에서 사용가능
-    block에서는 안먹힘 */
+text-align 속성은 inline구조에서 사용가능
+    block에서는 안먹힘
 .banner ul li.banner__img1 {
     text-align: left;
 }
@@ -281,7 +290,61 @@ Cross Browsing 방법은 아래처럼*/
 }
 .banner ul li.banner__img3 {
     text-align: right;
+} */
+/* Jquery이용 슬릭배너 */
+.banner {
+    position: relative;
+    padding: 24px 0 40px;
 }
+.banner .slick-prev {
+    position: absolute;
+    left: -80px;
+    top: 80px;
+    width: 43px;
+    height: 43px;
+    background: url(../img/icon.png) no-repeat -150px 0;
+    text-indent: -9999px;
+    cursor: pointer;
+}
+.banner .slick-next {
+    position: absolute;
+    right: -80px;
+    top: 80px;
+    width: 43px;
+    height: 43px;
+    background: url(../img/icon.png) no-repeat -150px -43px;
+    text-indent: -9999px;
+    cursor: pointer;
+}
+.banner .slick-prev:hover {background-position: -193px 0;}
+.banner .slick-next:hover {background-position: -193px -43px;}
+.banner img {border: 4px solid #dcdcdc;}
+.banner img:hover {border-color: #98bcbc;}
+.banner .slick-slide {margin: 10px;}
+.banner .slick-dots {
+    position: absolute;
+    bottom: 15px;
+    display: block;
+    width: 100%;
+    text-align: center;
+}
+.banner .slick-dots li {
+    display: inline-block;
+    width: 15px;
+    height: 15px;
+    margin: 5px;
+}
+.banner .slick-dots li button {
+    font-size: 0;
+    line-height: 0;
+    display: block;
+    width: 15px;
+    height: 15px;
+    cursor: pointer;
+    background: #5dbfeb;
+    border-radius: 50%;
+}
+.banner .slick-dots li.slick-active button {background: #2b91c8;}
 
 /* 컨텐츠 영역 */
 /* column class 공통요소 */
@@ -625,12 +688,17 @@ Cross Browsing 방법은 아래처럼*/
     padding: 5px 10px;
     display: block; 
 }
+/* .tabMenu__list .tabMenu__btn {
+    padding: 5px 10px;
+    display: block; 
+} */
 .tabMenu__list li .tabMenu__notice {
     width: 270px;
     position: absolute;
     top: 48px;
     left: 0;
     border: 0;
+    display: none;
 }
 .tabMenu__list li .tabMenu__notice li {
     float: none;
@@ -650,6 +718,9 @@ Cross Browsing 방법은 아래처럼*/
 
 .tabMenu__list .active {
     background: #2c94c4;
+}
+.tabMenu__list .active ul {
+    display: block;
 }
 .tabMenu__list .active a {
     color: #fff;
@@ -759,8 +830,17 @@ Cross Browsing 방법은 아래처럼*/
 .gallery__btn--next:hover {
     background-position: -173px -189px;
 }
-.gallery__img  ul li a img {
-    width: 100%;
+
+/* gallery slide */
+.gallery__img {
+    display: flex;
+    overflow: hidden;
+}
+.gallery__img div {}
+.gallery__img div a {}
+.gallery__img div a img {
+    width: 287px;
+    transform: translateX(-574px);
 }
 
 /* 로그인 영역 */
